#60 - feature: Implementando paginação ao buscar todas categorias